# fastapi-crud

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  main.py  pyproject.toml
app/: auth.py  config.py  database.py  dependencies.py  exceptions.py  models.py  schemas.py
app/api/: auth.py  users.py
app/services/: user_service.py
data/: database.db
migrations/: env.py
migrations/versions/: 02d81d0d580a_initial_migration.py  216b2c6c4152_initial_migration.py  a46a575d37bb_add_role_to_users.py  ba1f89c3b4a3_initial_migration.py
